fix: list filters align

--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -83,8 +83,12 @@
   background-color: #fff !important;
 }
 
-::ng-deep.mat-mdc-form-field:hover .mat-mdc-form-field-focus-overlay {
-  opacity: 0 !important;
+.mat-mdc-form-field {
+  display: block;
+
+  ::ng-deep#{&}:hover &-focus-overlay {
+    opacity: 0 !important;
+  }
 }
 
 .example-detail-row .mat-mdc-cell {
